--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -87,7 +87,7 @@
           <a class="nav-link" routerLink="/notifications/sms" routerLinkActive="active">
             <i class="bi bi-chat-dots"></i>
             <span class="nav-text">SMS</span>
-            <span class="tooltip-text">SMS</span>
+            <span class="tooltip-text">Envoi immédiat de SMS</span>
           </a>
         </li>
         <li class="nav-item">
