refactor(context): adding the contexte folder

--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -91,6 +91,13 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/notifications/templates" routerLinkActive="active">
+            <i class="bi bi-files"></i>
+            <span class="nav-text">Modèles SMS</span>
+            <span class="tooltip-text">Gérer les modèles de SMS</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/notifications/emails" routerLinkActive="active">
             <i class="bi bi-envelope"></i>
             <span class="nav-text">Emails</span>
