--- a/src/app/features/auth/pages/first-connection-password/first-connection-password.component.scss
+++ b/src/app/features/auth/pages/first-connection-password/first-connection-password.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'assets/scss/variables';
 
 .container-fluid {
   background-color: #f8f9fa; // Un gris très clair pour le fond
