refeact(login-page): making the design more intuitive align with the existing design system

--- a/src/app/features/auth/pages/change-password/change-password.component.scss
+++ b/src/app/features/auth/pages/change-password/change-password.component.scss
@@ -1,4 +1,4 @@
-@import 'assets/scss/variables';
+@import 'variables';
 
 .container-fluid {
   background-color: #f8f9fa; // Un gris très clair pour le fond
