--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -9,10 +9,12 @@
         <div>
           <label class="form-label">Nom d'utilisateur</label>
           <input class="form-control" formControlName="username">
+          <app-validation-message [control]="formGroup.get('username')"></app-validation-message>
         </div>
         <div class="mt-3">
           <label class="form-label">Mot de passe</label>
           <input class="form-control" formControlName="password" type="password">
+          <app-validation-message [control]="formGroup.get('password')"></app-validation-message>
         </div>
         <div class="mt-2 text-end">
           <a [routerLink]="['/auth', 'password-forgotten']">Mot de passe oublié ?</a>
