refact(user): changing the type of user from number to string

--- a/src/app/features/auth/pages/first-connection-password/first-connection-password.component.html
+++ b/src/app/features/auth/pages/first-connection-password/first-connection-password.component.html
@@ -7,14 +7,14 @@
     <div class="card-body p-4">
       <form (ngSubmit)="handlePasswordChange()" [formGroup]="formGroup">
         <div class="form-floating mb-3">
-          <input class="form-control" formControlName="password" id="password" placeholder="Nouveau mot de passe"
+          <input class="form-control" formControlName="password" id="password"
                  type="password">
           <label for="password">Nouveau mot de passe</label>
           <app-validation-message [control]="formGroup.get('password')"></app-validation-message>
         </div>
         <div class="form-floating mt-3">
           <input class="form-control" formControlName="confirmPassword" id="confirmPassword"
-                 placeholder="Confirmer le mot de passe" type="password">
+                 type="password">
           <label for="confirmPassword">Confirmer le mot de passe</label>
           <app-validation-message [control]="formGroup.get('confirmPassword')"></app-validation-message>
         </div>
