--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -112,6 +112,13 @@
       <span class="group-title">Administration</span>
       <ul class="nav-items">
         <li class="nav-item">
+          <a class="nav-link" routerLink="/configurations" routerLinkActive="active">
+            <i class="bi bi-gear"></i>
+            <span class="nav-text">Paramétrage</span>
+            <span class="tooltip-text">Paramétrage</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/users" routerLinkActive="active">
             <i class="bi bi-shield-lock"></i>
             <span class="nav-text">Utilisateurs</span>
