--- a/src/app/features/configuration/components/bourse-form/bourse-form.component.html
+++ b/src/app/features/configuration/components/bourse-form/bourse-form.component.html
@@ -2,14 +2,14 @@
   <div class="modal-body">
     <p class="text-muted fst-italic">Les champs marqués d'un <span class="required-asterisk">*</span> sont obligatoires.</p>
     <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="type" placeholder="Type de bourse" formControlName="type">
-      <label for="type">Type de bourse <span class="required-asterisk">*</span></label>
-      <app-validation-message [control]="bourseForm.controls.type"></app-validation-message>
+      <input type="text" class="form-control" id="lebelle" placeholder="Type de bourse" formControlName="type">
+      <label for="lebelle">Type de bourse <span class="required-asterisk">*</span></label>
+      <app-validation-message [control]="bourseForm.get('type')!"></app-validation-message>
     </div>
     <div class="form-floating">
-      <input type="number" class="form-control" id="amount" placeholder="Montant" formControlName="amount">
-      <label for="amount">Montant (XAF) <span class="required-asterisk">*</span></label>
-      <app-validation-message [control]="bourseForm.controls.amount"></app-validation-message>
+      <input type="number" class="form-control" id="montant" placeholder="Montant" formControlName="amount">
+      <label for="montant">Montant (XAF) <span class="required-asterisk">*</span></label>
+      <app-validation-message [control]="bourseForm.get('amount')!"></app-validation-message>
     </div>
   </div>
   <div class="modal-footer">
