--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -125,13 +125,13 @@
             <span class="tooltip-text">Utilisateurs</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/users/add" routerLinkActive="active">
-            <i class="bi bi-shield-lock"></i>
-            <span class="nav-text">Utilisateurs</span>
-            <span class="tooltip-text">Utilisateurs</span>
-          </a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" routerLink="/users/add" routerLinkActive="active">-->
+<!--            <i class="bi bi-shield-lock"></i>-->
+<!--            <span class="nav-text">Utilisateurs</span>-->
+<!--            <span class="tooltip-text">Utilisateurs</span>-->
+<!--          </a>-->
+<!--        </li>-->
         <li class="nav-item">
           <a class="nav-link" routerLink="/roles" routerLinkActive="active">
             <i class="bi bi-person-badge"></i>
