--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -2,17 +2,12 @@
   <div (click)="$event.stopPropagation()" class="modal-panel">
     <header class="modal-header">
       <div class="modal-title">
-        <ng-content select="[modal-title]"></ng-content>
+        {{ title }}
       </div>
       <button (click)="onClose()" class="modal-close-btn">
         <i class="bi bi-x-lg"></i>
       </button>
     </header>
-    <main class="modal-body">
-      <ng-content select="[modal-body]"></ng-content>
-    </main>
-    <footer class="modal-footer">
-      <ng-content select="[modal-footer]"></ng-content>
-    </footer>
+    <ng-content></ng-content>
   </div>
 </div>
