--- a/src/app/features/configuration/components/club-admin/club-admin.component.html
+++ b/src/app/features/configuration/components/club-admin/club-admin.component.html
@@ -7,15 +7,16 @@
     </button>
   </div>
   <div class="card-body">
-    <div *ngIf="clubs$ | async as clubs; else loading">
-      <div *ngIf="clubs.length > 0; else emptyState" class="table-responsive">
-        <table class="table table-striped table-hover">
-          <thead>
-          <tr>
-                          <th scope="col">Nom</th>
-                          <th scope="col" class="text-end">Actions</th>          </tr>
-          </thead>
-          <tbody>
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+          <th scope="col">Nom</th>
+          <th scope="col" class="text-end">Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <ng-container *ngIf="clubs$ | async as clubs; else loading">
           <tr *ngFor="let club of clubs">
             <td>{{ club.name }}</td>
             <td class="text-end">
@@ -27,25 +28,25 @@
               </button>
             </td>
           </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <ng-template #emptyState>
-        <div class="text-center p-5">
-          <p class="text-muted">Aucun club n'a été ajouté pour le moment.</p>
-        </div>
-      </ng-template>
+          <tr *ngIf="clubs.length === 0">
+            <td colspan="2" class="text-center p-5 text-muted">
+              Aucun club n'a été ajouté pour le moment.
+            </td>
+          </tr>
+        </ng-container>
+        <ng-template #loading>
+          <tr app-skeleton-loader></tr>
+          <tr app-skeleton-loader></tr>
+          <tr app-skeleton-loader></tr>
+        </ng-template>
+        </tbody>
+      </table>
     </div>
-
-    <ng-template #loading>
-      <app-skeleton-loader [isLoading]="true"></app-skeleton-loader>
-    </ng-template>
   </div>
 </div>
 
 <!-- Modale pour Ajouter/Modifier un club -->
-<app-modal [isOpen]="isModalOpen" (closeModal)="closeClubModal()" [title]="selectedClub ? 'Modifier le club' : 'Ajouter un club'">
+<app-modal *ngIf="isModalOpen" (closeModal)="closeClubModal()" [title]="selectedClub ? 'Modifier le club' : 'Ajouter un club'">
   <app-club-form
     [club]="selectedClub"
     [isSaving]="isSaving"
@@ -56,7 +57,7 @@
 
 <!-- Modale de confirmation de suppression -->
 <app-confirm-delete-modal
-  [isOpen]="isConfirmOpen"
+  *ngIf="isConfirmOpen"
   (closeModal)="closeDeleteConfirm()"
   (confirmDelete)="onDeleteClub()">
 </app-confirm-delete-modal>
