--- a/src/app/features/configuration/components/commission-admin/commission-admin.component.html
+++ b/src/app/features/configuration/components/commission-admin/commission-admin.component.html
@@ -7,44 +7,46 @@
     </button>
   </div>
   <div class="card-body">
-    <div *ngIf="commissions$ | async as commissions; else loading">
-      <div *ngIf="commissions.length > 0; else emptyState" class="table-responsive">
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th scope="col">Nom</th>
-              <th scope="col" class="text-end">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let commission of commissions">
-              <td>{{ commission.name }}</td>
-              <td class="text-end">
-                <button class="btn btn-link btn-sm text-primary" (click)="openCommissionModal(commission)">
-                  <i class="bi bi-pencil-fill"></i>
-                </button>
-                <button class="btn btn-link btn-sm text-danger" (click)="openDeleteConfirm(commission)">
-                  <i class="bi bi-trash-fill"></i>
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <ng-template #emptyState>
-        <div class="text-center p-5">
-          <p class="text-muted">Aucune commission n'a été ajoutée pour le moment.</p>
-        </div>
-      </ng-template>
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+          <th scope="col">Nom</th>
+          <th scope="col" class="text-end">Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <ng-container *ngIf="commissions$ | async as commissions; else loading">
+          <tr *ngFor="let commission of commissions">
+            <td>{{ commission.name }}</td>
+            <td class="text-end">
+              <button class="btn btn-link btn-sm text-primary" (click)="openCommissionModal(commission)">
+                <i class="bi bi-pencil-fill"></i>
+              </button>
+              <button class="btn btn-link btn-sm text-danger" (click)="openDeleteConfirm(commission)">
+                <i class="bi bi-trash-fill"></i>
+              </button>
+            </td>
+          </tr>
+          <tr *ngIf="commissions.length === 0">
+            <td colspan="2" class="text-center p-5 text-muted">
+              Aucune commission n'a été ajoutée pour le moment.
+            </td>
+          </tr>
+        </ng-container>
+        <ng-template #loading>
+          <tr app-skeleton-loader></tr>
+          <tr app-skeleton-loader></tr>
+          <tr app-skeleton-loader></tr>
+        </ng-template>
+        </tbody>
+      </table>
     </div>
-    <ng-template #loading>
-      <app-skeleton-loader [isLoading]="true"></app-skeleton-loader>
-    </ng-template>
   </div>
 </div>
 
 <!-- Modale pour Ajouter/Modifier une commission -->
-<app-modal [isOpen]="isModalOpen" (closeModal)="closeCommissionModal()" [title]="selectedCommission ? 'Modifier la commission' : 'Ajouter une commission'">
+<app-modal *ngIf="isModalOpen" (closeModal)="closeCommissionModal()" [title]="selectedCommission ? 'Modifier la commission' : 'Ajouter une commission'">
   <app-commission-form
     [commission]="selectedCommission"
     [isSaving]="isSaving"
@@ -55,7 +57,7 @@
 
 <!-- Modale de confirmation de suppression -->
 <app-confirm-delete-modal
-  [isOpen]="isConfirmOpen"
+  *ngIf="isConfirmOpen"
   (closeModal)="closeDeleteConfirm()"
   (confirmDelete)="onDeleteCommission()">
 </app-confirm-delete-modal>
