refact(config): correction de certain begeug

--- a/src/app/features/configuration/components/bourse-form/bourse-form.component.html
+++ b/src/app/features/configuration/components/bourse-form/bourse-form.component.html
@@ -2,9 +2,9 @@
   <div class="modal-body">
     <p class="text-muted fst-italic">Les champs marqués d'un <span class="required-asterisk">*</span> sont obligatoires.</p>
     <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="lebelle" placeholder="Type de bourse" formControlName="lebelle">
-      <label for="lebelle">Type de bourse <span class="required-asterisk">*</span></label>
-      <app-validation-message [control]="bourseForm.get('lebelle')!"></app-validation-message>
+      <input type="text" class="form-control" id="libelle" placeholder="Type de bourse" formControlName="libelle">
+      <label for="libelle">Type de bourse <span class="required-asterisk">*</span></label>
+      <app-validation-message [control]="bourseForm.get('libelle')!"></app-validation-message>
     </div>
     <div class="form-floating">
       <input type="number" class="form-control" id="montant" placeholder="Montant" formControlName="montant">
