--- a/src/app/features/member/pages/member-detail/member-detail.component.html
+++ b/src/app/features/member/pages/member-detail/member-detail.component.html
@@ -235,7 +235,7 @@
         </div>
         <div *ngIf="bourse.id" class="card-body info-grid">
           <div class="info-pair"><span class="info-key">Libellé</span><span
-            class="info-value">{{ bourse.lebelle }}</span></div>
+            class="info-value">{{ bourse.libelle }}</span></div>
           <div class="info-pair"><span class="info-key">Montant</span><span
             class="info-value">{{ bourse.montant | currency:'XOF':'symbol':'1.0-0' }}</span></div>
         </div>
