--- a/src/app/features/configuration/components/bourse-admin/bourse-admin.component.html
+++ b/src/app/features/configuration/components/bourse-admin/bourse-admin.component.html
@@ -19,7 +19,7 @@
         <tbody>
         <ng-container *ngIf="bourses$ | async as bourses; else loading">
           <tr *ngFor="let bourse of bourses">
-            <td>{{ bourse.lebelle }}</td>
+            <td>{{ bourse.libelle }}</td>
             <td>{{ bourse.montant | currency:'XAF':'symbol':'1.0-0' }}</td>
             <td class="text-end">
               <button class="btn btn-link btn-sm text-primary" (click)="openBourseModal(bourse)">
